# QVR300

./: config.yaml
DisplayController/: settings.gradle
DisplayController/AndroidTest/: build.gradle
DisplayController/controller/: build.gradle
DisplayController/displaycontroller/: build.gradle
UVCCamera2.0/: build.gradle  local.properties  settings.gradle
UVCCamera2.0/libuvccamera/: build.gradle
UVCCamera2.0/libuvccamera/src/main/cpp/jni/: Android.mk  Application.mk  CMakeLists.txt  hid.c  hidapi.h  uvc_native.cpp
UVCCamera2.0/libuvccamera/src/main/cpp/jni/arcore/: ARCORE_API.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/include/libusb/libusb/: libusbi.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/include/libuvc/libuvc/: libuvc.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/jni/: Android.mk  Application.mk
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libjpeg/include/: jconfigint.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libjpeg/libjpeg-turbo-1.5.0/: Android.mk
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libusb/libusb/android/: config.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libusb/libusb/android/jni/: libusb.mk
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libusb/libusb/libusb/: core.c  libusb.h  libusbi.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libusb/libusb/libusb/os/: android_netlink.c  android_usbfs.c  linux_usbfs.c  linux_usbfs.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libuvc/libuvc/android/jni/: Android.mk
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libuvc/libuvc/include/libuvc/: libuvc.h  libuvc_internal.h  localdefines.h  utilbase.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libuvc/libuvc/src/: device.c  diag.c  frame-mjpeg.c  frame.c  init.c  stream.c  utilbase.c
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libuvc_bk/libuvc/Linux/include/libuvc/: libuvc_internal.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libuvc_bk/libuvc/android/jni/: Android.mk
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libuvc_bk/libuvc/include/libuvc/: libuvc.h  libuvc_internal.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/libuvc_android/source/libuvc_bk/libuvc/src/: device.c  example.c  init.c  stream.c
UVCCamera2.0/libuvccamera/src/main/cpp/jni/model/: shader.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/sample/: CubeSample.cpp  CubeSample.cpp隆拢bak  CubeSample.h  GLSampleBase.h  Model3DSample.cpp  Model3DSample.h
UVCCamera2.0/libuvccamera/src/main/cpp/jni/util/: LogUtil.h
UVCCamera2.0/usbCameraTest0/: build.gradle
doc/: index.html
doc/html/: SVR.html  annotated.html  classes.html  dir_0147871c7885df2e7fdb218a833706d0.html  dir_5bbb3867738b31817e33773f7def3a0f.html  dir_cff0ee75802e759ed53256d6dc338077.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  namespaces.html  namespacesvr_controller_axis1_d.html  namespacesvr_controller_axis2_d.html  namespacesvr_controller_button.html  namespacesvr_controller_touch.html  pages.html  structsvr_begin_params-members.html  structsvr_begin_params.html  structsvr_controller_caps-members.html  structsvr_controller_caps.html  structsvr_controller_state-members.html  structsvr_controller_state.html  structsvr_device_info-members.html  (+37 more)
framework/: svrAndroidMain.cpp  svrApplication.cpp  svrApplication.h  svrConfig.cpp  svrCpuTimer.cpp  svrCpuTimer.h  svrGeometry.cpp  svrGeometry.h  svrGpuTimer.cpp  svrHashTable.h  svrKtxLoader.cpp  svrKtxLoader.h  svrProfile.cpp  svrProfile.h  svrRenderExt.cpp  svrRenderExt.h  svrRenderTarget.cpp  svrShader.cpp  svrShader.h  svrUtil.cpp  svrUtil.h
invision/: Common.h  CpuTimer.cpp  CpuTimer.h  InVisionMutex.cpp  InVisionMutex.h  InVisionSignal.cpp  InVisionSignal.h  InVisionThread.cpp  InVisionThread.h  LayerFetcher.cpp  LayerFetcher.h  invisionsfclient.h
samples/: .gitignore
(+354 files in other folders)
